--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "scripts": {
     "dev": "nodemon",
     "dev:serve": "ts-node src/index.ts",
-    "lint": "tslint --project .",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "build": "rimraf dist && tsc",
     "build:serve": "ts-node dist/index.js"
   },
@@ -30,10 +30,21 @@
   "devDependencies": {
     "@types/express": "^4.17.2",
     "@types/node": "^13.1.8",
+    "@typescript-eslint/eslint-plugin": "^2.17.0",
+    "@typescript-eslint/parser": "^2.17.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.9.0",
+    "eslint-import-resolver-typescript": "^2.0.0",
+    "eslint-plugin-import": "^2.20.0",
+    "eslint-plugin-json": "^2.0.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.18.0",
     "nodemon": "^2.0.2",
+    "prettier": "^1.19.1",
     "rimraf": "^3.0.0",
     "ts-node": "^8.6.2",
-    "tslint": "^6.0.0",
     "typescript": "^3.7.5"
   }
 }
