--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
     "dev:serve": "ts-node src/index.ts",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "build": "rimraf dist && tsc",
-    "build:serve": "ts-node dist/index.js"
+    "build:serve": "node dist/index.js"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1"
   },
   "devDependencies": {
