--- a/.eslintignore
+++ b/.eslintignore
@@ -1,11 +1,13 @@
 # /node_modules/* in the project root is ignored by default
 
-# build artefacts
+# build
 dist/*
-coverage/*
+
 # data definition files
 **/*.d.ts
+
 # 3rd party libs
 /src/public/
+
 # custom definition files
 /src/types/
