--- a/.eslintrc
+++ b/.eslintrc
@@ -1,12 +1,17 @@
 {
-  "extends": [
-    "airbnb",
-    "plugin:@typescript-eslint/recommended"
-  ],
   "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "project": "./tsconfig.json",
+    "sourceType": "module",
+    "ecmaVersion": 8
+  },
   "plugins": [
     "@typescript-eslint",
     "prettier"
+  ],
+  "extends": [
+    "airbnb-base",
+    "plugin:@typescript-eslint/recommended"
   ],
   "settings": {
     "import/parsers": {
