--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,8 @@
-# Application Port - express server listens on this port (default 3000).
+# Environment
+NODE_ENV=development
+
+# Application Port
 PORT=3000
+
+# Application Name
+APP_NAME='Name'
