--- a/.eslintrc
+++ b/.eslintrc
@@ -1,40 +1,7 @@
 {
-  "parser": "@typescript-eslint/parser",
-  "parserOptions": {
-    "project": "./tsconfig.json",
-    "sourceType": "module",
-    "ecmaVersion": 8
-  },
-  "plugins": [
-    "@typescript-eslint",
-    "prettier"
-  ],
-  "extends": [
-    "airbnb-base",
-    "plugin:@typescript-eslint/recommended"
-  ],
-  "settings": {
-    "import/parsers": {
-      "@typescript-eslint/parser": [".ts", ".tsx"]
-    },
-    "import/resolver": {
-      "typescript": {}
-    }
-  },
+  "extends": "eslint:recommended",
+  "parser": "babel-eslint",
   "rules": {
-    "import/no-extraneous-dependencies": [
-      2,
-      { "devDependencies": ["**/test.tsx", "**/test.ts"] }
-    ],
-    "@typescript-eslint/indent": ["error", 2],
-    "object-curly-spacing": ["error", "never"],
-    "array-bracket-spacing": ["error", "never"],
-    "computed-property-spacing": ["error", "never"],
-    "semi": ["error", "never"],
-    "comma-dangle": ["error", "never"],
-    "import/prefer-default-export": "off",
-    "import/extensions": "off",
-    "no-underscore-dangle": "off",
-    "no-param-reassign": "off"
+    "no-undef": "off"
   }
 }
