--- a/package.json
+++ b/package.json
@@ -18,10 +18,8 @@
   "homepage": "https://github.com/rmoralp/calsot#readme",
   "scripts": {
     "dev": "nodemon",
-    "dev:serve": "ts-node src/index.ts",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "build": "rimraf dist && tsc",
-    "build:serve": "node dist/index.js"
+    "dev:serve": "babel-node src",
+    "lint": "eslint . --ext .js"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
@@ -29,22 +27,14 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.2",
-    "@types/node": "^13.1.8",
-    "@typescript-eslint/eslint-plugin": "^2.17.0",
-    "@typescript-eslint/parser": "^2.17.0",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-config-prettier": "^6.9.0",
-    "eslint-import-resolver-typescript": "^2.0.0",
-    "eslint-plugin-import": "^2.20.0",
-    "eslint-plugin-json": "^2.0.1",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.2",
+    "@babel/core": "^7.8.4",
+    "@babel/node": "^7.8.4",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/preset-env": "^7.8.4",
+    "babel-eslint": "10.0.3",
+    "eslint": "6.8.0",
     "nodemon": "^2.0.2",
     "prettier": "^1.19.1",
-    "rimraf": "^3.0.0",
-    "ts-node": "^8.6.2",
-    "typescript": "^3.7.5"
+    "rimraf": "^3.0.0"
   }
 }
