--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "lowdb": "^1.0.0",
     "uuid": "^3.4.0"
   },
   "devDependencies": {
