--- a/package.json
+++ b/package.json
@@ -34,10 +34,14 @@
     "@babel/node": "^7.8.4",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/plugin-proposal-decorators": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.8.3",
     "@babel/preset-env": "^7.8.4",
     "@babel/register": "^7.8.6",
+    "@babel/runtime": "^7.8.7",
     "babel-eslint": "10.0.3",
     "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
+    "deep-equal-in-any-order": "^1.0.24",
     "eslint": "6.8.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-config-standard": "^14.1.0",
